--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,20 @@ android {
 }
 
 dependencies {
-
+    var lifecycle_version = "2.5.1"
     implementation("androidx.core:core-ktx:1.9.0")
-    //gson
+
+    //lifeCycle
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
+
+    //Gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    //serialization json
+    //serializer
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
+
+    //coil
+    implementation("io.coil-kt:coil-compose:2.5.0")
 
     implementation 'androidx.navigation:navigation-compose:2.7.6'
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
